Updates to assets

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "editor.wordWrap": "wordWrapColumn",
-    "editor.wordWrapColumn": 160
+    "editor.wordWrapColumn": 160,
+    "editor.fontFamily": "'Cousine', monospace"
 }
