T-MB - Creates endpoints for user creation (initial)

--- a/api/Tracker.Web/Tracker.Web.csproj
+++ b/api/Tracker.Web/Tracker.Web.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tracker.Data\Tracker.Data.csproj" />
+    <ProjectReference Include="..\Tracker.Services\Tracker.Services.csproj" />
   </ItemGroup>
 
 </Project>
