--- a/api/Tracker.Domain/Tracker.Domain.csproj
+++ b/api/Tracker.Domain/Tracker.Domain.csproj
@@ -8,6 +8,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <RootNamespace>Tracker.Services</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
