--- a/api/Tracker.Web/Tracker.Web.csproj
+++ b/api/Tracker.Web/Tracker.Web.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tracker.Services\Tracker.Services.csproj" />
+    <ProjectReference Include="..\Tracker.Domain\Tracker.Domain.csproj" />
   </ItemGroup>
 
 </Project>
